Update layout.html to add hx-boost

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="">
 <head>
-    <script src='/js/htmx.min.js'></script>
+    <script src="/js/htmx.min.js"></script>
     <title>Contact App</title>
 </head>
-<body>
+<body hx-boost="true">
     <main>
         <header>
             <h1>Contacts.app</h1>
