--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="">
 <head>
-    <script src="/js/htmx.min.js"></script>
+    <script src="static/js/htmx.min.js"></script>
     <title>Contact App</title>
 </head>
 <body hx-boost="true">
