--- a/templates/edit.html
+++ b/templates/edit.html
@@ -28,9 +28,7 @@
         <button>Save</button>
     </fieldset>
 </form>
-<form action="/contacts/{{ contact.id }}/delete" method="post">
-    <button>Delete Contact</button>
-</form>
+<button hx-delete="/contacts/{{ contact.id }}">Delete Contact</button>
 <p>
     <a href="/contacts">Back</a>
 </p>
