--- a/templates/edit.html
+++ b/templates/edit.html
@@ -28,7 +28,13 @@
         <button>Save</button>
     </fieldset>
 </form>
-<button hx-delete="/contacts/{{ contact.id }}">Delete Contact</button>
+<button 
+    hx-delete="/contacts/{{ contact.id }} " 
+    hx-target="body"
+    hx-push-url="true"
+    hx-confirm="Are you sure you want to delete this contact?">
+Delete Contact
+</button>
 <p>
     <a href="/contacts">Back</a>
 </p>
